[FIX] hr_skills: fix resume_one2many width
Steps to reproduce:
    1- Go on employee app
    2- Click on resume section
    3- Click on Add on resume tab
    4- Put on description a big table with at least 20 columns
    5- Save
The resume table and the buttons "add", "delete" with be hidden by the skill table.

Reason:
    The skill table element is too wide

Solution:
    The skill table's width is fixed and is contained in resume section element

task-4881917

closes odoo/odoo#224148

X-original-commit: 01875ca956eb6b6564d209011e92ea7513acc95b

--- a/addons/hr_skills/static/src/fields/resume_one2many/resume_one2many.scss
+++ b/addons/hr_skills/static/src/fields/resume_one2many/resume_one2many.scss
@@ -10,6 +10,7 @@
         padding: $o-hrs-timeline-entry-padding;
 
         &.o_resume_timeline_cell {
+            overflow: hidden !important;
             div {
                 width: $o-hrs-timeline-dot-size;
                 height: $o-hrs-timeline-dot-size;
@@ -31,6 +32,10 @@
                 }
             }
         }
+    }
+
+    .o_resume_line_desc {
+        overflow: auto;
     }
 
     .o_resume_line_title, .o_resume_line_desc {
